# rclone-hub

./: .env  .env.example  .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: routes.py
backend/app/db/: database.py
backend/app/models/: schemas.py
backend/app/services/: rclone.py  searches.py  sizes.py  transfers.py  verify.py
backend/rclone_hub_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/integration/: test_transfer_manager.py
backend/tests/unit/: test_files_content_route.py  test_rclone_delete_mode.py  test_rclone_paths.py  test_remote_config_routes.py  test_searches.py  test_size_and_rename_routes.py  test_sizes.py  test_verify.py
docs/: api.md  architecture.md  transfer-safety.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
frontend/src/: main.tsx
frontend/src/api/: client.ts
frontend/src/app/: App.test.tsx  App.tsx
frontend/src/components/: ConfirmDialog.tsx  DiagnosticsPanel.tsx  FileList.tsx  Pane.tsx  RemoteConfigPanel.tsx  SettingsPanel.tsx  TransferQueuePanel.tsx
frontend/src/state/: types.ts
frontend/src/styles/: app.css
scripts/: dev.sh
